Fix footer on mobile.

--- a/content/assets/default.scss
+++ b/content/assets/default.scss
@@ -373,7 +373,10 @@ center {
 		vertical-align: top;
 		display: inline-block;
 
-		@include mobile { width: auto; }
+		@include mobile {
+			display: block;
+			width: auto;
+		}
 	}
 
 	#contact {
